# Kimera-PGMO

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
install/: kimera_pgmo_https.rosinstall  kimera_pgmo_ssh.rosinstall
kimera_pgmo/: CMakeLists.txt  package.xml
kimera_pgmo/cmake/: kimera_pgmoConfig.cmake.in
kimera_pgmo/include/kimera_pgmo/: DeformationGraph.h  KimeraPgmo.h  KimeraPgmoInterface.h  MeshDeformation.h  MeshDelta.h  MeshFrontend.h  MeshFrontendInterface.h  MeshTraits.h  MeshTypes.h  PclMeshTraits.h  SparseKeyframe.h  deformation_graph.h  hashing.h  kimera_pgmo_interface.h  mesh_deformation.h  mesh_delta.h  mesh_frontend_interface.h  mesh_traits.h  mesh_types.h  pcl_mesh_traits.h  sparse_keyframe.h
kimera_pgmo/include/kimera_pgmo/compression/: DeltaCompression.h  MeshCompression.h  OctreeCompression.h  VoxbloxCompression.h  VoxelClearingCompression.h  block_compression.h  delta_compression.h  mesh_compression.h  octree_compression.h  redundancy_checker.h  voxblox_compression.h  voxel_clearing_compression.h
kimera_pgmo/include/kimera_pgmo/utils/: CommonFunctions.h  CommonStructs.h  MeshIO.h  MeshInterface.h  PclMeshInterface.h  RangeGenerator.h  RosConversion.h  VoxbloxMeshInterface.h  VoxbloxMsgInterface.h  VoxbloxUtils.h  common_functions.h  common_structs.h  logging.h  mesh_interface.h  mesh_io.h  pcl_mesh_interface.h  range_generator.h  ros_conversion.h  voxblox_mesh_interface.h  voxblox_utils.h
kimera_pgmo/launch/: kimera_pgmo_robot.launch  mesh_deformer.launch
kimera_pgmo/msg/: KimeraPgmoMesh.msg
kimera_pgmo/params/Jackal/: parameters.yaml
kimera_pgmo/params/JackalMedfield/: parameters.yaml
kimera_pgmo/params/uHumans2/: parameters.yaml
kimera_pgmo/scripts/: convert_dgrf.py  plot_dgrf.py  plot_frontend_timing.py  plot_pgmo_timing.py
kimera_pgmo/src/: DeformationGraph.cpp  KimeraPgmoInterface.cpp  MeshDelta.cpp  MeshFrontendInterface.cpp  SparseKeyframe.cpp  deformation_graph.cpp  deformation_graph_io.cpp  kimera_pgmo_interface.cpp  mesh_deformation.cpp  mesh_delta.cpp  mesh_frontend_interface.cpp  mesh_frontend_node.cpp  mesh_traits.cpp  pcl_mesh_traits.cpp  sparse_keyframe.cpp
kimera_pgmo/src/compression/: DeltaCompression.cpp  MeshCompression.cpp  OctreeCompression.cpp  VoxbloxCompression.cpp  VoxelClearingCompression.cpp  block_compression.cpp  delta_compression.cpp  mesh_compression.cpp  octree_compression.cpp  redundancy_checker.cpp  voxblox_compression.cpp  voxel_clearing_compression.cpp
kimera_pgmo/src/utils/: CommonFunctions.cpp  CommonStructs.cpp  Logging.cpp  MeshIO.cpp  TriangleMeshConversion.cpp  VoxbloxMeshInterface.cpp  VoxbloxMsgInterface.cpp  VoxbloxUtils.cpp  common_functions.cpp  common_structs.cpp  logging.cpp  mesh_io.cpp  range_generator.cpp  voxblox_mesh_interface.cpp
kimera_pgmo/srv/: LoadGraphMesh.srv  RequestMeshFactors.srv
kimera_pgmo/test/: CMakeLists.txt  pgmo_fixtures.cpp  pgmo_fixtures.h  pgmo_unit_tests.cpp  test_block_compression.cpp  test_common_functions.cpp  test_common_structs.cpp  test_deformation_edge_factor.cpp  test_deformation_graph.cpp  test_delta_compression.cpp  test_graph.cpp  test_kimera_dpgmo.cpp  test_kimera_pgmo.cpp  test_kimera_pgmo.test  test_mesh_deformation.cpp  test_mesh_delta.cpp  test_mesh_frontend.cpp  test_mesh_frontend_interface.cpp  test_mesh_io.cpp  test_octree_compression.cpp  test_traits.cpp  test_voxblox_compression.cpp  test_voxel_clearing_compression.cpp
kimera_pgmo/test/data/: cube.ply  graph.dgrf
kimera_pgmo_msgs/: CMakeLists.txt  package.xml
kimera_pgmo_msgs/msg/: KimeraPgmoMesh.msg  TriangleIndices.msg
kimera_pgmo_ros/: CMakeLists.txt  package.xml
kimera_pgmo_ros/app/: kimera_pgmo_node.cpp  mesh_frontend_node.cpp  mesh_publisher_node.cpp  mesh_trajectory_deformer.cpp  voxblox_mesh_frontend_node.cpp
kimera_pgmo_ros/include/kimera_pgmo_ros/: GtsamConversions.h  KimeraPgmo.h  MeshConversion.h  MeshDeltaConversion.h  MeshFrontend.h  RosLogSink.h  VisualizationFunctions.h  VoxbloxMsgInterface.h  gtsam_conversions.h  kimera_pgmo.h  mesh_conversion.h  mesh_delta_conversion.h  mesh_frontend.h  ros_log_sink.h  visualization_functions.h  voxblox_mesh_frontend.h  voxblox_msg_conversion.h  voxblox_msg_interface.h
kimera_pgmo_ros/include/kimera_pgmo_ros/conversion/: gtsam_conversions.h  mesh_conversion.h  mesh_delta_conversion.h  ros_conversion.h  voxblox_msg_conversion.h
kimera_pgmo_ros/launch/: kimera_pgmo.launch  kimera_pgmo_robot.launch  mesh_deformer.launch
kimera_pgmo_ros/rviz/: uHumans2.rviz
kimera_pgmo_ros/src/: GtsamConversions.cpp  KimeraPgmo.cpp  MeshConversion.cpp  MeshDeltaConversion.cpp  MeshFrontend.cpp  VisualizationFunctions.cpp  VoxbloxMsgConversion.cpp  VoxbloxMsgInterface.cpp  gtsam_conversions.cpp  kimera_pgmo.cpp  mesh_conversion.cpp  mesh_delta_conversion.cpp  mesh_frontend.cpp  visualization_functions.cpp  voxblox_mesh_frontend.cpp  voxblox_msg_conversion.cpp  voxblox_msg_interface.cpp
kimera_pgmo_ros/src/conversion/: gtsam_conversions.cpp  mesh_conversion.cpp  mesh_delta_conversion.cpp  voxblox_msg_conversion.cpp
kimera_pgmo_ros/test/: CMakeLists.txt  pgmo_ros_unit_tests.cpp  test_artifacts.h  test_gtsam_conversions.cpp  test_kimera_dpgmo.cpp  test_kimera_dpgmo.test  test_kimera_pgmo.cpp  test_kimera_pgmo.test  test_mesh_conversion.cpp
kimera_pgmo_rviz/: CMakeLists.txt  package.xml  plugins.xml
kimera_pgmo_rviz/include/kimera_pgmo_rviz/: MeshDisplay.h  MeshVisual.h  TfEventBuffer.h  VisualsMap.h  mesh_display.h  mesh_visual.h  visibility_field.h
kimera_pgmo_rviz/src/: MeshDisplay.cpp  MeshVisual.cpp  TfEventBuffer.cpp  VisibilityField.cpp  VisualsMap.cpp  mesh_display.cpp  mesh_visual.cpp  tf_event_buffer.cpp  visibility_field.cpp  visuals_map.cpp
launch/: generate_mesh.launch  kimera_pgmo.launch  kimera_pgmo_lamp.launch  kimera_pgmo_multi.launch  kimera_pgmo_robot.launch  kimera_rmpgo.launch  mesher_mapper.launch
msg/: AbsolutePoseStamped.msg  KimeraPgmoMesh.msg  KimeraPgmoMeshDelta.msg  RelativePoseStamped.msg  TriangleMeshIdStamped.msg
params/: parameters.yaml
rviz/: kimera_pgmo.rviz  kimera_pgmo_u1.rviz  (+1 more)
(+132 files in other folders)
