<?xml version="1.0"?>
<package format="2">
  <name>mesher_mapper</name>
  <version>0.0.1</version>
  <description>Mesh Mapping Library</description>

  <maintainer email="yunchang@mit.edu">Yun Chang</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>gtsam</depend>
  <depend>Eigen</depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rosbag</depend>
  <depend>tf</depend>

  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
</package>
