<?xml version="1.0"?>
<package format="2">
  <name>kimera_pgmo</name>
  <version>0.0.1</version>
  <description>Kimera PGMO</description>

  <maintainer email="yunchang@mit.edu">Yun Chang</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <depend>eigen</depend>
  <depend>gtsam</depend>
  <depend>kimera_rpgo</depend>

  <depend>geometry_msgs</depend>
  <depend>mesh_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pose_graph_tools_msgs</depend>
  <depend>pose_graph_tools_ros</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>voxblox</depend>
  <depend>voxblox_msgs</depend>

  <test_depend>rosunit</test_depend>
  <test_depend>rostest</test_depend>

  <exec_depend>rviz_mesh_plugin</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
