<?xml version="1.0"?>
<package format="2">
  <name>kimera_pgmo_msgs</name>
  <version>0.0.1</version>
  <description>Kimera PGMO message definitions</description>

  <maintainer email="yunchang@mit.edu">Yun Chang</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <depend>geometry_msgs</depend>
  <depend>pose_graph_tools_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
</package>
