<?xml version="1.0"?>
<package format="2">
  <name>kimera_pgmo_ros</name>
  <version>0.0.1</version>
  <description>Kimera PGMO ROS interface</description>

  <maintainer email="yunchang@mit.edu">Yun Chang</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>config_utilities</depend>
  <depend>kimera_pgmo</depend>
  <depend>kimera_pgmo_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pose_graph_tools_msgs</depend>
  <depend>pose_graph_tools_ros</depend>
  <depend>roscpp</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <test_depend>rosunit</test_depend>
  <test_depend>roslib</test_depend>
  <test_depend>rostest</test_depend>

  <exec_depend>kimera_pgmo_rviz</exec_depend>
  <exec_depend>voxblox_msgs</exec_depend>
</package>
